Sun Mar 23 11:44:26 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- decrement numRecord (it start from 1, not zero)
	- ignore numRecord for header fields

Sun Mar 23 11:06:37 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c:
	- return "Microsoft SQL Server" for mssql
	- handle CALL odbc escape (ignore case)
	- fix wrong escape detection (like {xxcall ...)

Thu Mar 20 10:58:38 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/ct.c src/dblib/bcp.c
	- patch #706953 from Bill Thompson
	- freebcp was writing empty date fields to the data file.
	- fix result processing after sending blob with ct_send_data. 

Wed Mar 19 11:53:19 EST 2003 	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h include/tds.h
	* src/apps/freebcp.c src/apps/freebcp.h
	- support for the -A flag (packet size) 
	* src/ctlib/ct.c
	* src/dblib/bcp.c src/dblib/dblib.c
	* src/tds/convert.c src/tds/query.c src/tds/token.c
	- Applied "various fixes" patch #706303 from Bill Thompson:
	-  correctly return the "rows affected" count
	-  ct-lib layer error handling via callbacks
	-  datetime character formats: ddmonyy, ddmonyyyy, dd-mon-yy 

Wed Mar 19 01:36:04 EST 2003	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c add more doxygen comments, more indentation
	
Tue Mar 18 21:13:38 EST 2003	Mark Lilback <mark@lilback.com>
	* src/ctlib/ct.c: ct_describe correctly sets the status flag 
	-   for identity and nullable columns.

Tue Mar 18 01:13:28 EST 2003	JK Lowden <jklowden@schemamania.org>
	* Makefile.am tds.dox create doxygen output and targets
	* include/sybdb.h src/dblib/dblib.c add doxygen comments, reindent.
	* src/tds/Makefile.am minor changes, doxygen soon to be removed.

Sat Mar 15 12:25:43 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: remove wrong assert

Fri Mar 14 14:54:40 EST 2003	JK Lowden <jklowden@schemamania.org>