@@ -1,3 +1,10 @@
+Sun Mar 23 21:12:11 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
+	* include/tds_sysdep_private.h: portability define
+	* src/odbc/connectparams.c: discard space before attributes
+	* src/odbc/odbc.c: check NULL value
+	* src/tds/mem.c src/tds/token.c:
+	- compute sql state if not available
+
 Sun Mar 23 11:44:26 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/error.c:
 	- decrement numRecord (it start from 1, not zero)
